# cordic-softmax-llama

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
include/: cordic_iterator.h  cordic_postprocessor.h  cordic_preprocessor.h  cordic_softmax.h  cordic_types.h
src/: cordic_iterator.cpp  cordic_postprocessor.cpp  cordic_preprocessor.cpp  cordic_softmax.cpp
tests/: test_iterator.cpp  test_postprocessor.cpp  test_preprocessor.cpp  test_softmax.cpp  test_types.cpp
